--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -373,7 +373,7 @@ test-rpm:
   needs: [setup-repo-rpm]
   script:
     - pushd build/
-    - dnf --nogpgcheck libgtirb-functions.rpm libgtirb-functions-dev.rpm
+    - dnf --nogpgcheck localinstall libgtirb-functions.rpm libgtirb-functions-dev.rpm
     - popd
     - rm -rf build/
 
