added gtirb requirement to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ option(GTIRB_FUNCTIONS_STRIP_DEBUG_SYMBOLS
 # ---------------------------------------------------------------------------
 # Dependencies
 # ---------------------------------------------------------------------------
-# find_package(gtirb REQUIRED)
+find_package(gtirb REQUIRED)
 
 # ---------------------------------------------------------------------------
 # Global settings
