--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.txt" VERSION_FILE)
 
 string(REGEX MATCH "VERSION_MAJOR ([0-9]*)" _ ${VERSION_FILE})
 set(GTIRB_FUNCTIONS_MAJOR_VERSION ${CMAKE_MATCH_1})
-message(MAJ_VERSION=${GTIRB_FUNCTIONS_MAJOR_VERSION})
 
 string(REGEX MATCH "VERSION_MINOR ([0-9]*)" _ ${VERSION_FILE})
 set(GTIRB_FUNCTIONS_MINOR_VERSION ${CMAKE_MATCH_1})
@@ -24,7 +23,6 @@ project(
     "${GTIRB_FUNCTIONS_MAJOR_VERSION}.${GTIRB_FUNCTIONS_MINOR_VERSION}.${GTIRB_FUNCTIONS_PATCH_VERSION}"
 )
 set(GTIRB_FUNCTIONS_VERSION ${CMAKE_PROJECT_VERSION})
-message(GTIRB_FUNCTIONS_VERSION=${GTIRB_FUNCTIONS_VERSION})
 
 option(ENABLE_CONAN "Use Conan to inject dependencies" OFF)
 
@@ -227,7 +225,7 @@ export(PACKAGE gtirb-functions)
 # Debian/RPM package generation
 # ---------------------------------------------------------------------------
 set(CPACK_PROJECT_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cpack-config.cmake)
-
+set(CPACK_GTIRB_VERSION ${gtirb_VERSION})
 # set(CMAKE_PROJECT_HOMEPAGE_URL
 
 set(CPACK_PACKAGE_VERSION_MAJOR ${GITRB_FUNCTIONS_MAJOR_VERSION})
