--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -15,7 +15,7 @@ variables:
 
 stages:
   - check-format
-  - test
+  - pytest
   - build
   - test_package
   - cpack-make-installers
@@ -57,8 +57,8 @@ check-format:
       ================================================================================
       EOF
 
-test:
-  stage: test
+pytest:
+  stage: pytest
   script:
     - pip install -r requirements-dev.txt
     - mypy gtirb_functions
