--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -240,8 +240,7 @@ coverage:
   before_script:
     - echo ""
   script:
-    - *cpack-update-apt-sources-template
-    - apt-get install -y libgtirb-functions-dev
+    - apt-get install -y  libgtirb-functions libgtirb-functions-dev
     - '[ -f /usr/include/gtirb_functions.hpp ]'
 
 .test-lib: &test-lib
@@ -249,7 +248,6 @@ coverage:
   before_script:
     - echo ""
   script:
-    - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions
     - '[ -f /usr/lib/libgtirb_functions.so]'
     # - ./test-install GrammaTech
@@ -257,7 +255,6 @@ coverage:
 .test-lib-dbg: &test-lib-dbg
   stage: cpack-test
   script:
-    - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions libgtirb-functions-dbg
     - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
