--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -216,8 +216,6 @@ coverage:
     - cd installers/ && dpkg-scanpackages . /dev/null > Packages
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
-    wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-    echo "deb https://download.grammatech.com/gtirb/files/apt-repo $DISTRO_NAME stable"|  tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     apt-get update
 
@@ -240,7 +238,8 @@ coverage:
   before_script:
     - echo ""
   script:
-    - apt-get install -y  libgtirb-functions libgtirb-functions-dev
+    - *cpack-update-apt-sources-template
+    - apt-get install -y libgtirb-functions-dev
     - '[ -f /usr/include/gtirb_functions.hpp ]'
 
 .test-lib: &test-lib
@@ -248,6 +247,7 @@ coverage:
   before_script:
     - echo ""
   script:
+    - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions
     - '[ -f /usr/lib/libgtirb_functions.so]'
     # - ./test-install GrammaTech
@@ -255,6 +255,7 @@ coverage:
 .test-lib-dbg: &test-lib-dbg
   stage: cpack-test
   script:
+    - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions libgtirb-functions-dbg
     - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
