--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -239,6 +239,7 @@ coverage:
     - echo ""
   script:
     - *cpack-update-apt-sources-template
+    - apt-cache search libgtirb
     - apt-get install -y libgtirb-functions-dev
     - '[ -f /usr/include/gtirb_functions.hpp ]'
 
@@ -248,6 +249,7 @@ coverage:
     - echo ""
   script:
     - *cpack-update-apt-sources-template
+    - apt-cache search libgtirb
     - apt-get install -y libgtirb-functions
     - '[ -f /usr/lib/libgtirb_functions.so]'
     # - ./test-install GrammaTech
@@ -256,6 +258,7 @@ coverage:
   stage: cpack-test
   script:
     - *cpack-update-apt-sources-template
+    - apt-cache search libgtirb
     - apt-get install -y libgtirb-functions libgtirb-functions-dbg
     - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
