--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -241,8 +241,7 @@ coverage:
     - *cpack-update-apt-sources-template
     - apt-cache search libgtirb
     - apt-get install -y libgtirb-functions-dev
-    - ls /usr/include
-    - '[ -f /usr/include/gtirb_functions.hpp ]'
+    - '[ -f /usr/include/gtirb_functions/gtirb_functions.hpp ]'
 
 .test-lib: &test-lib
   stage: cpack-test-shared-lib
@@ -252,6 +251,7 @@ coverage:
     - *cpack-update-apt-sources-template
     - apt-cache search libgtirb
     - apt-get install -y libgtirb-functions
+    - ls /usr/lib
     - '[ -f /usr/lib/libgtirb_functions.so]'
     # - ./test-install GrammaTech
 
