--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -161,7 +161,7 @@ coverage:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_CONAN=ON ..
+    - cmake -DENABLE_CODE_COVERAGE=ON -DGTIRB_FUNCTIONS_ENABLE_TESTS=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_CONAN=ON ..
     - make
     - ctest
     - gcovr -e googletest-src -r ..
@@ -179,7 +179,6 @@ coverage:
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTIONS_STRIP_DEBUG_SYMBOLS=ON ..
     - make
-    - ctest
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib-dbg
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=dev
@@ -200,7 +199,6 @@ coverage:
     - dnf --nogpgcheck localinstall -y capstone-devel-*.rpm libgtirb.rpm libgtirb-devel.rpm
     - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTIONS_STRIP_DEBUG_SYMBOLS=ON ..
     - make
-    - ctest
     - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib
     - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib-dbg
     - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=dev
@@ -218,10 +216,6 @@ coverage:
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     apt-get update
-
-
-.cpack-check-lib-build-id: &cpack-check-lib-build-id |
-    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
 
 
 .rpm-test-package-template: &rpm-test-package-template |
