Actually wrote a package description

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,7 +232,8 @@ set(CPACK_GTIRB_VERSION ${gtirb_VERSION})
 set(CPACK_PACKAGE_VERSION_MAJOR ${GITRB_FUNCTIONS_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${GTIRB_FUNCTIONS_MINOR_VERSION})
 set(CPACK_PACKAGE_VERSION_PATCH ${GTIRB_FUNCTIONS_PATCH_VERSION})
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Package description")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
+    "A convenience library for working with functions in GTIRB")
 set(CPACK_PACKAGE_VENDOR "GrammaTech Inc.")
 set(CPACK_PACKAGE_CONTACT adavis@grammatech.com)
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
