--- a/.ci/Dockerfile.ubuntu18
+++ b/.ci/Dockerfile.ubuntu18
@@ -1,22 +1,17 @@
 FROM ubuntu:18.04
 
 ARG BOOST_VERSION=1.67
-ARG CMAKE_VERSION=3.13.0
 
 SHELL [ "/bin/bash", "-c" ]
 # DEBIAN_FRONTEND=noninteractive: needed to sidestep interactivity in install
 # of tzdata, which asks for time zone info
 RUN apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y build-essential curl clang-format\
+    apt-get install -y build-essential curl clang-format cmake\
                  gcovr git \
                  python3 python3-pip software-properties-common \
                  autoconf automake \
                  wget
-
-RUN curl -SL https://cmake.org/files/v$(echo $CMAKE_VERSION | sed -r 's/\.[0-9]+$//;')/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz \
-    |tar -xz --strip-components=1 -C /usr/local
-
 
 RUN  python3 -m pip install --upgrade pip && \
      python3 -m pip install pre-commit conan
@@ -25,11 +20,9 @@ RUN  python3 -m pip install --upgrade pip && \
 RUN add-apt-repository ppa:mhier/libboost-latest
 RUN apt-get update -y && apt-get install -y libboost${BOOST_VERSION}-dev
 
-
 # install gtirb
 RUN wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic stable"|  tee -a /etc/apt/sources.list
-RUN apt-get update && apt install -y libgtirb-dev
+RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic unstable"|  tee -a /etc/apt/sources.list
 
 # Use EDT for timestamps (necessary?)
 RUN ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
