--- a/.ci/Dockerfile.ubuntu20
+++ b/.ci/Dockerfile.ubuntu20
@@ -2,30 +2,21 @@ FROM ubuntu:20.04
 
 
 ARG BOOST_VERSION=1.67
-ARG CMAKE_VERSION=3.13.0
 # DEBIAN_FRONTEND=noninteractive: needed to sidestep interactivity in install
 # of tzdata, which asks for time zone info
 RUN apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y build-essential curl clang-format\
+    apt-get install -y build-essential curl clang-format cmake\
                  gcovr git  \
+                 libboost-dev \
                  python3 python3-pip software-properties-common \
                  autoconf automake \
                  wget
 
-RUN curl -SL https://cmake.org/files/v$(echo $CMAKE_VERSION | sed -r 's/\.[0-9]+$//;')/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz \
-    |tar -xz --strip-components=1 -C /usr/local
-
-
-
-# install boost
-RUN add-apt-repository ppa:mhier/libboost-latest
-RUN apt-get update -y && apt-get install -y libboost${BOOST_VERSION}-dev
 
 # install gtirb
 RUN wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo focal stable"|  tee -a /etc/apt/sources.list
-RUN apt-get update && apt install -y libgtirb-dev
+RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo focal unstable"|  tee -a /etc/apt/sources.list
 
 
 RUN pip3 install --upgrade pip && \
