trying to get gtirb dependency to be correct but not over specific

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,7 +229,10 @@ export(PACKAGE gtirb-functions)
 # ---------------------------------------------------------------------------
 set(CPACK_PROJECT_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cpack-config.cmake)
 set(CPACK_GTIRB_VERSION ${gtirb_VERSION})
-set(CPACK_PACKAGE_VERSION_MAJOR ${GITRB_FUNCTIONS_MAJOR_VERSION})
+math(EXPR next_gtirb_patch "${gtirb_PATCH_VERSION}+1")
+set(CPACK_NEXT_GTIRB_VERSION
+    ${gtirb_MAJOR_VERSION}.${gtirb_MINOR_VERSION}.${next_gtirb_patch})
+set(CPACK_PACKAGE_VERSION_MAJOR ${GTIRB_FUNCTIONS_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${GTIRB_FUNCTIONS_MINOR_VERSION})
 set(CPACK_PACKAGE_VERSION_PATCH ${GTIRB_FUNCTIONS_PATCH_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
