--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,8 @@ python_version = 3.6
 show_error_codes = True
 show_column_numbers = True
 
+no_implicit_optional = True
+
 disallow_incomplete_defs = True
 disallow_untyped_calls = True
 disallow_untyped_decorators = True
